<resources>
    <string name="app_name">Plants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plants_in_the_world">Plants In The World</string>
    <string name="palm_title_tab">Palm</string>
    <string name="tomato_title_tab">Tomato</string>
    <string name="synonyms">Synonyms</string>
    <string name="picture">Picture</string>
    <string name="share_action_title">Share</string>
    <string name="family_name">Family :</string>
    <string name="author_name">Author :</string>
    <string name="scientific_name">Scientific Name :</string>
    <string name="common_family">Common Family :</string>
</resources>