<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="?attr/colorSurface"
        tools:context="com.google.samples.apps.sunflower.GardenActivity"
        tools:ignore="MergeRootFrame">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/plant_detail_app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="?attr/colorPrimaryVariant"
            android:animateLayoutChanges="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimaryVariant"
                app:statusBarScrim="?attr/colorPrimaryVariant"
                app:collapsedTitleGravity="center"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="true">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/plant_detail_app_bar_height"
                    android:contentDescription="@string/picture"
                    android:fitsSystemWindows="true"
                    android:scaleType="center"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_detail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:titleTextColor="?attr/colorOnSurface"
                    app:layout_collapseMode="pin"
                    app:contentInsetStartWithNavigation="0dp"
                    app:navigationIcon="@drawable/ic_backbutton" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/plant_detail_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            android:paddingBottom="@dimen/fab_bottom_padding"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_detail"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_normal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/family_name"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/plant_family"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Family" />

                    <TextView
                        android:id="@+id/plant_family_common"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/plant_family"
                        tools:text="Common Family" />

                    <TextView
                        android:id="@+id/plant_scientific_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/plant_family_common"
                        tools:text="Scientific Name" />

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textIsSelectable="true"
                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        app:layout_constraintTop_toBottomOf="@+id/plant_scientific_name"
                        tools:text="Author" />

                    <TextView
                        android:id="@+id/textView2"
                        android:fontFamily="sans-serif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/common_family"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:text="@string/scientific_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/textView4"
                        android:fontFamily="sans-serif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/author_name"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_synonyms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plant_description"
                    tools:listitem="@layout/item_list_synonym" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
